[package]
name = "encrypted_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
miniscript = { version = "12.3.4", features = ["serde"] }
num_enum = "0.7.4"
rand = "0.9.2"

# devices
async-hwi = {version = "0.0.29", optional = true}

# cli
clap = { version = "4.5.42", features = ["derive"] , optional = true}
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}

[[bin]]
name = "beb"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
devices = ["dep:async-hwi"]
cli = ["dep:clap", "dep:tokio", "devices"]
