[package]
name = "encrypted_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
num_enum = "0.7.4"
rand = "0.9.2"

#miniscript
mscript_12_3_5 = { version = "12.3.5", features = ["serde"], package = "miniscript" , optional = true}
mscript_12_0 = { version = "12.0", features = ["serde"], package = "miniscript" , optional = true}

# devices
async-hwi = {version = "0.0.29", optional = true}

# cli
clap = { version = "4.5.42", features = ["derive"] , optional = true}
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}

[[bin]]
name = "beb"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
miniscript_latest = ["miniscript_12_3_5"]
miniscript_12_3_5 = ["mscript_12_3_5"]
miniscript_12_0 = ["mscript_12_0"]
devices = ["dep:async-hwi"]
cli = ["dep:clap", "dep:tokio", "devices"]
