[package]
name = "encrypted_backup-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.encrypted_backup]
path = ".."

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_deriv_paths"
path = "fuzz_targets/parse_deriv_paths.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_individual_secrets"
path = "fuzz_targets/parse_individual_secrets.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_encrypted_payload"
path = "fuzz_targets/parse_encrypted_payload.rs"
test = false
doc = false
bench = false
